# QWrapper

./: .gitignore  Makefile  PKGBUILD.proto  README.md  build.sh  daemon.cpp  hide.cpp  hook.cpp  launcher.sh  patch.sh  wrap.sh
.github/workflows/: ci.yml
.github/workflows/scripts/: ci.sh
__patch__/: .gitignore  wrap.sh  xdg-open
daemon/: Cargo.toml
daemon/src/: configs.rs  daemon.rs  dlopt.rs  inject.rs  main.rs
inject/: Cargo.toml
inject/src/: lib.rs
